# kaiko

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
src/: cpu_mode.rs  err.rs  lib.rs  main.rs  regext.rs
src/ext/: dataref.rs  mod.rs
src/phase1/: asm_analysis.rs  blind_analysis.rs  block_analysis.rs  branch_analysis.rs  disasm.rs  indirect_analysis.rs  indirect_fn_analysis.rs  mod.rs  reg_analysis.rs
src/phase2/: fn_analysis.rs  mod.rs  ref_fixup.rs
