[package]
name = "kaiko"
version = "0.1.0"
edition = "2024"

default-run = "cli"

[[bin]]
name = "cli"
path = "src/main.rs"
required-features = ["cli"]

[features]
# disable verbose tracing
no_tracers = ["tracing/release_max_level_info"]
# disable self-test
unchecked = []
# enable cli (not for library usage)
cli = ["clap", "clap-num", "tracing-subscriber"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }
clap-num = { version = "1.2.0", optional = true }
memchr = "2.8.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", optional = true }
yaxpeax-arch = "0.3.2"
yaxpeax-arm = { version = "0.4.0", git = "https://github.com/rva3/yaxpeax-arm", branch = "stable-dnm" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
